k8s/apps/webtop/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: webtop
    app.kubernetes.io/name: webtop
  name: webtop
  namespace: webtop
spec:
  ports:
    - name: http
      port: 3000
      protocol: TCP
      targetPort: http
  selector:
    app: webtop
    app.kubernetes.io/name: webtop
  type: ClusterIP
