k8s/apps/webtop/webrtc-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    lbipam.cilium.io/ips: 192.168.12.143
  labels:
    app: webtop
    app.kubernetes.io/name: webtop
  name: webtop-webrtc
  namespace: webtop
spec:
  ports:
    - name: webrtc
      port: 59000
      protocol: UDP
      targetPort: webrtc
  selector:
    app: webtop
    app.kubernetes.io/name: webtop
  type: LoadBalancer
