k8s/apps/webtop/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: webtop
  namespace: webtop
spec:
  hostnames:
    - desktop.walnuts.dev
  parentRefs:
    - name: envoy-gateway
      namespace: envoy-gateway-system
  rules:
    - backendRefs:
        - name: webtop
          port: 3000
      timeouts:
        backendRequest: 0s
        request: 0s
