k8s/apps/webtop/networkpolicy-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: webtop-ingress
  namespace: webtop
spec:
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: envoy-gateway-system
          podSelector:
            matchLabels:
              app.kubernetes.io/component: proxy
              app.kubernetes.io/managed-by: envoy-gateway
              app.kubernetes.io/name: envoy
      ports:
        - port: 3000
          protocol: TCP
  podSelector:
    matchLabels:
      app: webtop
      app.kubernetes.io/name: webtop
  policyTypes:
    - Ingress
